testData/diagnostics/50k_paren_brackets.diag.txt
testData/diagnostics/50k_paren_brackets.nut line = (1) column = (35) : error: AST too big. Consider simplifing it
(((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((
                                   ^
(((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((

